fixed lighting on meshes